regression/smv/syntax-errors/syntax2.desc
CORE
syntax2.smv

^file .* line 3: syntax error, unexpected VAR, expecting MODULE before 'VAR'$
^EXIT=1$
^SIGNAL=0$
--
